add SSL API & Mock data
