# dashboard/src/api/schema/ssl.ts
@@ -1,8 +1,40 @@
 import request from '@/utils/request'
 
-export const getRoles = (params: any) =>
+type SSLType = {
+  cert: string
+  key: string
+  sni: string
+}
+
+export const getList = (params: any) =>
   request({
-    url: '/roles',
-    method: 'get',
+    url: '/ssl',
+    method: 'GET',
     params
   })
+
+export const set = (id: string, params: SSLType) =>
+  request({
+    url: `/ssl/${id}`,
+    method: 'PUT',
+    params
+  })
+
+export const get = (id: string) =>
+request({
+  url: `/ssl/${id}`,
+  method: 'GET'
+})
+
+export const remove = (id: string) =>
+  request({
+    url: `/ssl/${id}`,
+    method: 'DELETE'
+  })
+
+export const create = (params: SSLType) =>
+request({
+  url: '/ssl',
+  method: 'POST',
+  params
+})
